--- a/JavaScript Assignment 2/index.html
+++ b/JavaScript Assignment 2/index.html
@@ -7,13 +7,15 @@
     <title>JavaScript Assignment 2</title>
 </head>
 <body>
-    <center><h1>JavaScript Assignment</h1>
+    <center>
+    <h1>JavaScript Assignment</h1>
     <p id="demo">Ali</p>
     <button type="button" onclick="myFunction()">Click me!</button>
+    <h1 id="heading">Hello, world!</h1>
+    <button onclick="changeBgColor(document.getElementById('heading'), 'red')">Change color</button>
+    <ul id="ul" style="list-style-type: none;"></ul>
     </center>
     
-    <ul id="ul"></ul>
-    <h2 class="bg">Background Color</h2>
 
 <script src="index.js"></script>
 </body>
